--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+![screen-install](ss.png)
+![screen-install](ss2.png)
+
 === DWM Patches, Changes, and Documentation ===
 
 Status Bar: DWMBlocks-Async
